Overflow Fixed (?)

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -42,9 +42,14 @@ body {
   @extend .mat-app-background; margin: 0;
   background: #04040471 url('/assets/img/background-img-1.jpg');
   height:90vh;
+  overflow: auto;
 }
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Matura MT Script Capitals'
+}
+
+::-webkit-scrollbar {
+  display: none;
 }
 
 
